Récup listes appr et test

--- a/Features .ipynb
+++ b/Features .ipynb
@@ -66,10 +66,10 @@
    "source": [
     "#path_appr = \"../Donnees_projet/Ensemble_apprentissage/\"\n",
     "#path_test = \"../Donnees_projet/Ensemble_test/\"\n",
-    "#path_appr = \"../../4A/Projet/Ensemble d'apprentissage/\"\n",
-    "#path_test = \"../../4A/Projet/Ensemble de test/\"\n",
-    "path_appr = \"../DetecAnomal/Ensemble d'apprentissage/\"\n",
-    "path_test =\"../DetecAnomal/Ensemble de test/\""
+    "path_appr = \"../../4A/Projet/Ensemble d'apprentissage/\"\n",
+    "path_test = \"../../4A/Projet/Ensemble de test/\"\n",
+    "#path_appr = \"../DetecAnomal/Ensemble d'apprentissage/\"\n",
+    "#path_test =\"../DetecAnomal/Ensemble de test/\""
    ]
   },
   {
@@ -155,6 +155,9 @@
     "- Kurtosis \n",
     "- Energy \n",
     "- Average Crossing \n",
+    "\n",
+    "A ajouter ?\n",
+    "\n",
     "- Distribution spectrale d'énergie \n",
     "- Pourcentage d'extrema locaux \n",
     "\n",
@@ -410,7 +413,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## LA DATA FRAME "
+    "## Construction Data frame"
    ]
   },
   {
@@ -1048,7 +1051,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
