--- a/Application_article.ipynb
+++ b/Application_article.ipynb
@@ -1269,7 +1269,7 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1726,7 +1726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
