--- a/Classification_non_supervisée.ipynb
+++ b/Classification_non_supervisée.ipynb
@@ -4,7 +4,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classification non supervisée"
+    "# <center> Classification non supervisée</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sommaire :\n",
+    "* [0 - Lecture des données](#0---Lecture-des-données)\n",
+    "\n",
+    "\n",
+    "* [1 - Transformation des données](#1---Transformation-des-données)\n",
+    "\n",
+    " * [1.1 Coefficients de Fourier](#1.1-Coefficients-de-Fourier)\n",
+    " * [1.2 Coefficients d'ondelettes](#1.2-Coefficients-d'ondelettes)\n",
+    " * [1.3 Features](#1.3-Features)\n",
+    " \n",
+    "\n",
+    "* [2 - Analyse en composantes principales](#2---Analyse-en-composantes-principales)\n",
+    "\n",
+    "\n",
+    "* [3 - Méthodes de clustering sur les séries entières](#3---Méthodes-de-clustering-sur-les-séries-entières)\n",
+    " * [3.1 Classification ascendante hierarchique (CAH)](#3.1-Classification-ascendante-hierarchique-(CAH))\n",
+    " * [3.2 Isolation Forest](#3.2-Isolation-Forest)\n",
+    " * [3.3 One-Class Support Vector Machine (OCSVM)](#3.3-One-Class-Support-Vector-Machine-(OCSVM))\n",
+    " * [3.4 Local Outlier Factor (LOF)](#3.4-Local-Outlier-Factor-(LOF))\n",
+    "\n",
+    "\n",
+    "* [4 - Méthodes de clustering sur les fenêtres](#4---Méthodes-de-clustering-sur-les-fenêtres)\n",
+    " * [4.1 Pre-processing](#4.1-Pre-processing)\n",
+    " * [4.2 Dimensionality reduction](#4.2-Dimensionality-reduction)\n",
+    " * [4.3 Application de la méthode OCSVM](#4.3-Application-de-la-méthode-OCSVM)\n",
+    " * [4.4 Application de la méthode Isolation Forest](#4.4-Application-de-la-méthode-Isolation-Forest)\n",
+    " * [4.5 Application de la méthode Local Outlier Factor](#4.5-Application-de-la-méthode-Local-Outlier-Factor)"
    ]
   },
   {
@@ -590,7 +623,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.4 Liste des différents coefficients sur lesquels appliquer les méthodes"
+    "## Liste des différents coefficients sur lesquels appliquer les méthodes"
    ]
   },
   {
@@ -1293,14 +1326,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.3 Application de la méthode OC-SVM"
+    "### 4.3 Application de la méthode OCSVM"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On applique OC-SVM sur les coordonnées de l'ACP."
+    "On applique One-Class SVM sur les coordonnées de l'ACP."
    ]
   },
   {
@@ -2696,7 +2729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
