--- a/Lecture et nettoyage des données.ipynb
+++ b/Lecture et nettoyage des données.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lecture et nettoyage des données"
+    "# <center>Lecture et nettoyage des données</center>"
    ]
   },
   {
@@ -148,13 +148,6 @@
     "print('longueur min : ', longueur_min)\n",
     "print('longueur max : ', max(long))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1151,7 +1144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
